--- a/src/components/navigation/navigation.styles.scss
+++ b/src/components/navigation/navigation.styles.scss
@@ -12,7 +12,7 @@
     box-shadow: 0 0 10px #85888c;
     background-color: #fff;
     border-right: 1px solid #000000;
-    z-index: 1;
+    z-index: 4;
 
     &--open {
       left: 0;
